# zhitou

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  main.py  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml
config/: config.default.yaml  config.dev.yaml  config.test.yaml
config/api-gateway-nginx/: dev.conf
deploy/test/: Dockerfile.api  Dockerfile.copilotkit-server  README.md  build-api.sh  ragflow-docker-compose.yaml
docker/ragflow/: entrypoint.sh  ragflow-docker-compose.yaml  service_conf.yaml.template
docker/ragflow/.minio.sys/: format.json
docker/ragflow/nginx/: ragflow.https.conf
pnpm_packages/copilotkit-server/: package.json
pnpm_packages/copilotkit-server/src/: index.ts
pnpm_packages/nextjs-copilotkit-server/: package.json  pnpm-lock.yaml
pnpm_packages/nextjs-copilotkit-server/app/copilotkit/: route.ts
pnpm_packages/web/: orval.config.js  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
pnpm_packages/web/public/: index.html
pnpm_packages/web/src/: App.tsx  index.tsx  menuData.tsx  providers.tsx
pnpm_packages/web/src/components/: ProtectedRoute.tsx
pnpm_packages/web/src/components/AgentChat/: SessionListView.tsx
pnpm_packages/web/src/components/ToolCall/: think.tsx  web_search.tsx
pnpm_packages/web/src/layouts/: DashboardLayout.tsx
pnpm_packages/web/src/pages/: AgentPage.tsx  BasicChatPage.tsx  HomePage.tsx  Page2.tsx
pnpm_packages/web/src/styles/: global.css
pnpm_packages/web/tsconfig/: base.json  react-library.json
(+55 files in other folders)
